# mev-the-og

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_BIBLE.md  README.md  agents.md  batch1.patch  batch2.patch  batch3.patch  batch4.patch  batch5.patch  batch6.patch  batch7.patch  config.example.yaml  full-file-tree.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  update.patch
.github/workflows/: tests.yml
docs/: DRP.md  monitoring.md  onboarding.md
examples/: ai_flow_demo.py
scripts/: restore.py  rotate_secrets.py  snapshot.py
src/: dashboard.py  kill_switch.py  logger.py  mev_bot.py  monitoring.py  notifier.py  risk_manager.py  signer_service.py  transaction_manager  transaction_manager.py  utils.py
src/ai/: ai_orchestrator.py  alpha_scraper.py  auto_scaler.py  edge_pruner.py  edge_watcher.py  parameter_mutator.py  strategy_scorer.py
src/alpha/: bridge_games.py  cex_dex_flash_arb.py  cross_chain_arb.py  cross_layer_sandwich.py  flash_loan.py  flash_loan_liquidation.py  l2_sandwich.py  liquidation.py  (+4 more)
tests/: conftest.py  test_ai_mutation_and_pruning.py  test_bridge_games.py  test_chaos.py  test_config_manager.py  test_config_security.py  test_critical_events.py  test_cross_chain_arb.py  test_cross_layer_sandwich.py  test_drp_workflow.py  test_flash_loan.py  test_flash_loan_liquidation.py  test_kill_switch.py  test_l2_sandwich.py  test_liquidation.py  test_mev_bot.py  test_mev_share.py  test_mev_share_intent_sniper.py  test_nftfi.py  test_risk_manager.py  test_sequencer_auction_sniper.py  test_trading_integration.py
(+13 files in other folders)
